@@ -1,2 +1,3 @@
 Stephan Arts <stephan@xfce.org>
 Brian J. Tarricone <bjt23@cornell.edu>
+Jannis Pohlmann <jannis@xfce.org>
