@@ -1,3 +1,9 @@
+2008-07-02	Jannis Pohlmann <jannis@xfce.org>
+
+	* dialogs/appearance-dialog/main.c: Load icon themes properly.
+	  I used some of the code from the old mcs ui plugin.
+	* AUTHORS: I took the liberty to add my name here. 
+
 2008-07-01	Nick Schermer <nick@xfce.org>
 
 	* dialogs/accessibility-settings/accessibility-dialog.glade,
